--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ class: center, middle
 
 - R is a statistical programming language
 
-- RStudio is a convenient interface for R (an integreated development environment, IDE)
+- RStudio is a convenient interface for R (an integrated development environment [IDE])
 
 ---
 
