update office hour recommendation

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ Can you answer these questions?
 
 - Next week we will start in-class exercises as teams.
 
-- Having difficulty? Ask on GitHub or come to office hours!
+- Having difficulty? Ask on GitHub or stay after class for office hours!
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
