--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ class: center, middle, inverse, title-slide
 # Introducing your Tools
 ## Rstudio cloud and R Markdown
 ### Byron C. Jaeger
-### last updated: 2020-04-06
+### last updated: 2020-04-07
 
 ---
 
@@ -165,9 +165,7 @@ Key points
 - All packages share an underlying philosophy and a common syntax. 
 ]
 
-- I will teach you the essential functions in the tidyverse along with the essential ideas of base R. 
-
-- If there is time, I will also teach a little bit about `data.table`, the package that saved R!
+- I will teach you the essential functions in the tidyverse along with the essential ideas of base R, including `data.table`.
 
 ---
 
